Fixed slide overflow

--- a/src/scss/base/_scroll-snap.scss
+++ b/src/scss/base/_scroll-snap.scss
@@ -45,11 +45,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+	overflow: hidden;
 
-    @media (max-width: 768px) {
-        min-height: 100vh;
-        height: auto;
-    }
+    // @media (max-width: 768px) {
+    //     min-height: 100vh;
+    //     height: auto;
+    // }
 }
 
 .horizontal-slide {
